--- a/app/views/users/_campaign_ongoing.html.erb
+++ b/app/views/users/_campaign_ongoing.html.erb
@@ -1,6 +1,14 @@
-<div class="key"></div>
-<p class="byline brandon">Be the first to know</p>
-<%= form_for @user, :url => { :action => "create" } do |f| %>
+<!-- <div class="key"></div> -->
+<p class="byline brandon">Reserve your first edition print right now</p>
+<!-- <%= form_for @user, :url => { :action => "create" } do |f| %>
   <%= f.text_field :email, :placeholder => "Enter Email", :class => "email brandon" %>
   <input class="submit brandon" name="commit" type="submit" value="Step Inside" />
-<% end %>
+<% end %> -->
+
+
+<div class="input-append">
+  <%= form_for @user, :url => { :action => "create" } do |f| %>
+    <%= f.text_field :email, :placeholder => "Enter Email", :class => "email brandon span2 search-query" %>
+    <button type="submit" class="btn brandon submit">Step Inside</button>
+  <%end%>
+</div>
