--- a/app/assets/stylesheets/_core.scss
+++ b/app/assets/stylesheets/_core.scss
@@ -42,7 +42,7 @@ html.home{
 #home .hero .large{
 	font-weight: bold;
 	font-size: 40px;
-	color: #074E6F;
+	color: #1fa3a7;
 	text-transform: uppercase;
 	margin: 85px 0 0 136px;
 	position: relative;
@@ -81,7 +81,7 @@ html.home{
 #home .form-wrap .byline{
 	font-size: 15px;
 	text-transform: uppercase;
-	color: #074E6F;
+	color: #1fa3a7;
 	text-align: center;
 	font-weight: bold;
 	letter-spacing: 2px;
@@ -92,7 +92,7 @@ html.home{
 	float: left;
 	font-size: 13px;
 	padding: 8px 0 8px 10px;
-	border: 1px solid #074E6F;
+	border: 1px solid #1fa3a7;
 	width: 256px;
 	outline: none;
 	letter-spacing: 1px;
@@ -100,7 +100,7 @@ html.home{
 
 #home .form-wrap .submit{
 	width: 143px;
-	background: #074E6F;
+	background: #1fa3a7;
 	float: left;
 	height: 37px;
 	line-height: 37px;
@@ -119,7 +119,7 @@ html.home{
 #home .form-wrap.ended .thanks{
 	text-transform: uppercase;
 	font-weight: 500;
-	color: #074e6f;
+	color: #1fa3a7;
 	text-align: center;
 	font-size: 22px;
 	letter-spacing: 1px;
@@ -147,7 +147,7 @@ html.home{
 }
 
 #home .form-wrap.ended .go-to a{
-	color: #074e6f;
+	color: #1fa3a7;
 	font-size: 19px;
 	font-weight:bold;
 	text-transform: uppercase;
@@ -175,7 +175,7 @@ html.home{
 #home .form-wrap.ended .thanks{
 	text-transform: uppercase;
 	font-weight: 500;
-	color: #074e6f;
+	color: #1fa3a7;
 	text-align: center;
 	font-size: 22px;
 	letter-spacing: 1px;
@@ -203,7 +203,7 @@ html.home{
 }
 
 #home .form-wrap.ended .go-to a{
-	color: #074e6f;
+	color: #1fa3a7;
 	font-size: 19px;
 	font-weight:bold;
 	text-transform: uppercase;
@@ -247,12 +247,13 @@ html.home{
 }
 
 #refer .header{
-	height: 50px;
-	background: #074E6F;
+	// height: 50px;
+	// background: #1fa3a7;
 	width: 100%;
 	overflow:hidden;
 	z-index: 1;
 	position: relative;
+  border-bottom: 1px solid black;
 }
 
 #refer .header .content{
@@ -303,12 +304,12 @@ html.home{
 
 #refer .mammoth .need{
 	color: #FFF;
-	font-size: 38px;
-	text-transform: uppercase;
+	// font-size: 38px;
+  // line-height: 56px;
+	// text-transform: uppercase;
 	font-weight: bold;
 	margin: 102px 0 0 72px;
 	display: block;
-	line-height: 56px;
 	letter-spacing: 4px;
 	text-align: center;
 	width: 284px;
@@ -331,11 +332,11 @@ html.home{
 }
 
 #refer .share-wrap .title{
-	font-size: 30px;
+	font-size: 15px;
 	line-height: 40px;
 	text-transform: uppercase;
 	font-weight: bold;
-	color: #074E6F;
+	color: #1fa3a7;
 	margin-top: 18px;
 	letter-spacing: .13em;
 }
@@ -403,7 +404,7 @@ html.home{
 #refer .prizes .callout{
 	text-align: center;
 	font-size: 16px;
-	color: #074E6F;
+	color: #1fa3a7;
 	font-weight: bold;
 	margin: 20px 0 0 0;
 	letter-spacing: 2px;
@@ -451,7 +452,7 @@ html.home{
 #refer .prizes .products li.title{
 	height: 100%;
 	text-transform: uppercase;
-	color: #074E6F;
+	color: #1fa3a7;
 	font-weight: 500;
 	font-size: 14px;
 	float: left;
@@ -472,8 +473,9 @@ html.home{
 
 #refer .prizes .products li.product{
 	height: 100%;
-	color: #074E6F;
-	width: 125px;
+	color: #1fa3a7;
+	// width: 125px;
+	width: 115px;
 	margin-right: 129px;
 	float: left;
 	position: relative;
@@ -517,6 +519,7 @@ html.home{
 #refer .prizes .products li.product p{
 	text-align: center;
 	font-weight: 500;
+  color: #5d5d5d;
 }
 
 #refer .prizes .products li.product:last-child{
@@ -540,14 +543,14 @@ html.home{
 
 #refer .prizes .products li.product:hover .circle{
 	color: #FFF;
-	background: #074E6F;
-	border-color: #074E6F;
+	background: #1fa3a7;
+	border-color: #1fa3a7;
 }
 
 #refer .prizes .products li.product .tooltip{
 	height: 254px;
 	width: 190px;
-	border: 4px solid #074E6F;
+	border: 4px solid #1fa3a7;
 	position: absolute;
 	top: -285px;
 	left: -32px;
@@ -567,7 +570,7 @@ html.home{
 #refer .prizes p.place{
 	text-align: center;
 	font-size: 16px;
-	color: #074E6F;
+	color: #1fa3a7;
 	width: 100%;
 	font-weight: 500;
 	margin-top: 30px;
@@ -671,7 +674,14 @@ only screen and (min-device-pixel-ratio: 2) {
 	}
 }
 
-
+#howto {
+  background-color: #1fa3a7 !important;
+  color: #fafafa;
+  img {
+    width: 20%;
+    align-items: center;
+  }
+}
 
 
 
