--- a/app/views/users/_campaign_ongoing.html.erb
+++ b/app/views/users/_campaign_ongoing.html.erb
@@ -1,23 +1,8 @@
-<!-- <div class="key"></div> -->
-<p class="byline brandon">Reserve your first edition print right now</p>
-<!-- <%= form_for @user, :url => { :action => "create" } do |f| %>
-  <%= f.text_field :email, :placeholder => "Enter Email", :class => "email brandon" %>
-  <input class="submit brandon" name="commit" type="submit" value="Step Inside" />
-<% end %> -->
+<h4 class="py-2">Reserve your first edition print right now</h4>
 
-
-<!-- <div class="input-append">
-  <%= form_for @user, :url => { :action => "create" } do |f| %>
-    <%= f.text_field :email, :placeholder => "Enter Email", :class => "email brandon span2 search-query" %>
-    <button type="submit" class="btn brandon submit">Step Inside</button>
-  <% end %>
-</div> -->
-
-
-<div class="input-group mb-3">
+<div class="input-group mb-3 w-100">
   <%= form_for @user, :url => { :action => "create" } do |f| %>
     <%= f.text_field :email, :placeholder => "Enter Email", :class => "email form-control", html: {'aria-describedby': "basic-addon2"} %>
-    <!-- <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2"> -->
-    <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Step Inside</button>
-    <% end %>
+    <button class="btn btn-outline-light" type="submit" id="button-addon2">Step Inside</button>
+  <% end %>
 </div>
